Add an alias for `cherry-pick`

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,6 +8,7 @@
   ci = commit -a
   st = status
   br = branch
+  pick = cherry-pick
   lg = log --abbrev-commit --relative-date --decorate --pretty
   lgg = log --abbrev-commit --relative-date --decorate --pretty --graph
 [color]
