--- a/.gitconfig
+++ b/.gitconfig
@@ -16,3 +16,12 @@
   ui = auto
 [push]
   default = simple
+[pull]
+  rebase = true
+[fetch]
+  prune = true
+[filter "lfs"]
+  smudge = git-lfs smudge -- %f
+  process = git-lfs filter-process
+  required = true
+  clean = git-lfs clean -- %f
