--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@yaegassy/coc-nginx": ">=0.4.1",
+    "@yaegassy/coc-tailwindcss3": ">=0.5.4",
     "coc-css": ">=2.0.0",
     "coc-docker": ">=1.0.2",
     "coc-eslint": ">=1.6.0",
@@ -9,19 +10,18 @@
     "coc-json": ">=1.8.0",
     "coc-lua": ">=2.0.5",
     "coc-markdownlint": ">=1.28.0",
+    "coc-pairs": ">=1.4.2",
     "coc-phpls": ">=2.2.3",
+    "coc-prettier": ">=9.3.1",
     "coc-pyright": ">=1.1.310",
     "coc-sh": ">=1.1.1",
     "coc-solargraph": ">=1.2.4",
     "coc-sql": ">=0.11.0",
+    "coc-stylelint": ">=1.2.0",
+    "coc-stylua": ">=0.0.11",
     "coc-tsserver": ">=2.1.3",
     "coc-vetur": ">=1.2.5",
-    "coc-prettier": ">=9.3.1",
-    "coc-stylelint": ">=1.2.0",
-    "@yaegassy/coc-tailwindcss3": ">=0.5.4",
-    "coc-yaml": ">=1.9.0",
-    "coc-stylua": ">=0.0.11",
-    "coc-pairs": ">=1.4.2"
+    "coc-yaml": ">=1.9.0"
   },
   "lastUpdate": 1686642747234
 }
