🔧 Add stylua.styluaPath to use Homebrew stylua

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -4,5 +4,6 @@
   "solargraph.diagnostics": true,
   "solargraph.formatting": true,
   "solargraph.hover": true,
-  "stylua.configPath": "/Users/takamario/.config/stylua/stylua.toml"
+  "stylua.configPath": "/Users/takamario/.config/stylua/stylua.toml",
+  "stylua.styluaPath": "/opt/homebrew/bin/stylua"
 }
