--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@yaegassy/coc-nginx": ">=0.4.1",
     "@yaegassy/coc-tailwindcss3": ">=0.5.4",
+    "@yaegassy/coc-black-formatter": ">=0.1.2",
     "coc-css": ">=2.0.0",
     "coc-docker": ">=1.0.2",
     "coc-eslint": ">=1.6.0",
@@ -21,6 +22,7 @@
     "coc-stylua": ">=0.0.11",
     "coc-tsserver": ">=2.1.3",
     "coc-vetur": ">=1.2.5",
+    "coc-xml": ">=1.14.1",
     "coc-yaml": ">=1.9.0"
   },
   "lastUpdate": 1686642747234
