--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -4,6 +4,7 @@
     "@yaegassy/coc-tailwindcss3": ">=0.5.4",
     "@yaegassy/coc-black-formatter": ">=0.1.2",
     "coc-css": ">=2.0.0",
+    "coc-diagnostic": ">=0.24.0",
     "coc-docker": ">=1.0.2",
     "coc-eslint": ">=1.6.0",
     "coc-go": ">=1.3.17",
