--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -19,12 +19,12 @@
     "coc-sh": ">=1.1.1",
     "coc-solargraph": ">=1.2.4",
     "coc-sql": ">=0.11.0",
-    "coc-stylelint": ">=1.2.0",
     "coc-stylua": ">=0.0.11",
     "coc-tsserver": ">=2.1.3",
     "coc-vetur": ">=1.2.5",
     "coc-xml": ">=1.14.1",
-    "coc-yaml": ">=1.9.0"
+    "coc-yaml": ">=1.9.0",
+    "coc-stylelintplus": ">=1.5.0"
   },
   "lastUpdate": 1686642747234
 }
