🔧 Modify to use ruff and clippy

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -5,8 +5,9 @@
   "diagnostic.virtualTextCurrentLineOnly": false,
   "eslint.autoFixOnSave": true,
   "Lua.diagnostics.globals": ["vim"],
-  "python.formatting.provider": "black",
-  "python.linting.flake8Enabled": true,
+  "python.formatting.provider": "ruff",
+  "python.linting.ruffEnabled": true,
+  "rust-analyzer.check.command": "clippy",
   "stylua.configPath": "/Users/takamario/.config/stylua/stylua.toml",
   "stylua.styluaPath": "/opt/homebrew/bin/stylua",
   "tailwindCSS.custom.serverPath": "/opt/homebrew/bin/tailwindcss-language-server",
